<resources>
    <string name="google_maps_api">AIzaSyAqTT730RW4WzHXcdQ4RIMv7p8jIL-0Ljw</string>
    <string name="app_name">FuelTrack</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="join">Join</string>
    <string name="registerFailMsg">Register fail</string>
    <string name="LoginFailMsg">Login fail</string>
    <string name="registrationCompliteMsg">Registration complete.</string>
    <string name="welcome">Welcome in Fuel Track app</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="send_sms">Send sms</string>
    <string name="logout">Logout</string>
</resources>
