<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginb"
    tools:context=".auth.login.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="#4Dffffff"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:text="@string/login"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/join"
            app:layout_constraintEnd_toStartOf="@+id/join"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/emialLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/emailInput"
            android:text="@string/email"
            android:textColor="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/emailInput"
            app:layout_constraintEnd_toStartOf="@+id/emailInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/emailInput" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="32dp"
            android:autofillHints=""
            android:ems="10"
            android:textColor="@color/black"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/join"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="32dp"
            android:autofillHints=""
            android:textColor="@color/black"
            android:ems="10"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toTopOf="@+id/passwordInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:textColor="@color/black"
            android:layout_marginEnd="16dp"
            android:labelFor="@id/passwordInput"
            android:text="@string/password"
            app:layout_constraintBottom_toBottomOf="@+id/passwordInput"
            app:layout_constraintEnd_toStartOf="@+id/passwordInput"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/passwordInput" />

        <Button
            android:id="@+id/join"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="32dp"
            android:text="@string/join"
            android:background="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>